overlays/example/ingress-argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-tls-passthrough
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`argocd.prod.example.com`)
      services:
        - name: argocd-server
          port: https
  tls:
    passthrough: true
